[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/PNG/13-Breakout-Tiles.png" type="Texture" id=1]
[ext_resource path="res://asset/PNG/14-Breakout-Tiles.png" type="Texture" id=2]
[ext_resource path="res://Bloke.tres.gd" type="Script" id=3]
[ext_resource path="res://asset/PNG/14-Breakout-Tilesx.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.4251, 46.7669 )

[node name="Bloke" type="Area2D" groups=[
"blokes",
]]
script = ExtResource( 3 )
DefaultSprite = ExtResource( 1 )
BlokenSprite = ExtResource( 2 )
BlokenSprite2 = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 1 )

[node name="label" type="RichTextLabel" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Bloke_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Bloke_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Bloke_body_entered"]
